Formatting structure of directories

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,5 +33,5 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest starter/starter/unit_tests.py
+        pytest starter/unit_tests.py
         pytest starter/api_tests.py
