--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy
-pandas
-scikit-learn
-pytest
-requests
-fastapi==0.63.0
+numpy==1.23.1
+pandas==1.4.4
+scikit-learn==1.1.1
+pytest==7.1.2
+requests==2.23.0
+fastapi==0.52.0
 uvicorn
 gunicorn
